--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="dist/css/main.css"/>
 </head>
 <body>
-    <div class="header">
-        <h1 class="header__title">MyWeatherApp</h1>
+    <div class="app-header">
+        <h1 class="app-header__title">MyWeatherApp</h1>
     </div>
-    <div class="city-list" ng-controller="cityListController">
+    <div class="city-list" ng-controller="cityListController" >
         <div class="notification" ng-if="!cityList.length">Nothing to show... But you can change it.</div>
         <div class="city-list__item" ng-repeat="city in cityList">
             <div class="city-list__item-name">{{city.name}}</div>
@@ -29,11 +29,11 @@
         <form name="cityAddForm" ng-submit="save(city)" novalidate>
             <div class="form-item__group">
                 <label for="city[name]">Enter city</label>
-                <input type="text" name="city[name]" id="city[name]" ng-model="city.name" required/>
+                <input type="text" class="input-text" ng-autocomplete ng-model="city.name" options="{ types: '(cities)' }" name="city[name]" id="city[name]" required/>
             </div>
             <div class="form-item__group">
                 <label for="city[update_interval]">Set update interval</label>
-                <select name="city[update_interval]" id="city[update_interval]" ng-model="city.update_interval" required>
+                <select class="selector" name="city[update_interval]" id="city[update_interval]" ng-model="city.update_interval" required>
                     <option value="15">15 sec</option>
                     <option value="30">30 sec</option>
                     <option value="45">45 sec</option>
@@ -41,10 +41,11 @@
                 </select>
             </div>
             <div class="form-item__group">
-                <button class="form-item__button">Add one</button>
+                <button class="button">Add one</button>
             </div>
         </form>
     </div>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
     <script src="dist/js/bundle.js"></script>
 </body>
 </html>
