Fixed display form errors

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
         </form>
     </div>
-    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&sensor=false&language=en"></script>
     <script src="dist/js/bundle.js"></script>
 </body>
 </html>
